--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/meyearwood/hangman_cli/issues"
   },
-  "homepage": "https://github.com/meyearwood/hangman_cli#readme"
+  "homepage": "https://github.com/meyearwood/hangman_cli#readme",
+  "dependencies": {
+    "inquirer": "^3.3.0"
+  }
 }
